# Model-Watermarking-Implementation

./: .gitignore  0918.py  DISCLAIMER.md  README.md  pyproject.toml  requirements.txt
configs/: example_config.yaml
demo/: app.py
scripts/: run_evaluation.py
src/: __init__.py
src/eval/: __init__.py  evaluator.py  robustness.py
src/models/: __init__.py  watermarking.py
src/utils/: __init__.py  config.py  data_utils.py  metrics.py
tests/: test_watermarking.py
